# asteroids

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
SDL2/: CMakeLists.txt
headers/: asteroid.h  bullet.h  common.h  draw.h  font.h  init.h  input.h  main.h  ship.h  stage.h  structs.h
sources/: asteroid.c  bullet.c  draw.c  font.c  init.c  input.c  main.c  ship.c  stage.c
